force-app/main/default/objects/TabelaVendas__c/fields/Ativa__c.field-meta.xml
<CustomField>
    <fullName>Ativa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo responsável por indicar se esta tabela está ativa atualmente ou não</description>
    <label>Ativa?</label>
    <type>Checkbox</type>
</CustomField>