force-app/main/default/objects/TabelaVendas__c/fields/ConsideraSinalTotalmenteVista__c.field-meta.xml
<CustomField>
    <fullName>ConsideraSinalTotalmenteVista__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo responsável por indicar se esta tabela aceita pagamento totalmente à vista ou não</description>
    <label>Considera sinal totalmente à vista?</label>
    <type>Checkbox</type>
</CustomField>