force-app/main/default/objects/TabelaVendas__c/fields/DataFimVigencia__c.field-meta.xml
<CustomField>
    <fullName>DataFimVigencia__c</fullName>
    <label>Data de fim de vigência</label>
    <type>Date</type>
</CustomField>