force-app/main/default/objects/TabelaVendas__c/fields/DataInicioVigencia__c.field-meta.xml
<CustomField>
    <fullName>DataInicioVigencia__c</fullName>
    <label>Data de início de vigência</label>
    <type>Date</type>
</CustomField>