force-app/main/default/objects/TabelaVendas__c/fields/DescontoMoeda__c.field-meta.xml
<CustomField>
    <fullName>DescontoMoeda__c</fullName>
    <label>Desconto (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>