force-app/main/default/objects/TabelaVendas__c/fields/DescontoPercentual__c.field-meta.xml
<CustomField>
    <fullName>DescontoPercentual__c</fullName>
    <label>Desconto (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>