force-app/main/default/objects/TabelaVendas__c/fields/teste__c.field-meta.xml
<CustomField>
    <fullName>teste__c</fullName>
    <label>teste</label>
    <length>14</length>
    <type>Text</type>
</CustomField>