force-app/main/default/objects/TabelaVendas__c/validationRules/SomenteUmTipoDesconto.validationRule-meta.xml
<ValidationRule>
    <fullName>SomenteUmTipoDesconto</fullName>
    <active>true</active>
    <description>Mostra uma mensagem de erro se os dois tipos de desconto forem preenchidos</description>
    <errorConditionFormula>!ISBLANK(DescontoPercentual__c) &amp;&amp; !ISBLANK(DescontoMoeda__c)</errorConditionFormula>
    <errorMessage>Sómente um tipo de desconto pode ser selecionado</errorMessage>
</ValidationRule>