force-app/main/default/objects/TabelaVendas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DataInicioVigencia__c</columns>
    <columns>Ativa__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>